--- a/markup/css/style.css
+++ b/markup/css/style.css
@@ -38,7 +38,7 @@ nav>ul>li {
     margin-right: 5%;
 }
 
-.container_section_first > main {
+.container_section_first > section {
     width: 60vh;
     margin-left: 22%;
 
@@ -57,7 +57,7 @@ h2 {
 }
 
 .butn {
-    display: inline-block;  
+    display: inline-block;
     border: 1px solid rgb(0, 0, 0);
     background: #34547A;
     color: #fff;
@@ -107,13 +107,13 @@ li > div {
     padding-top: 5vh;
 }
 
-.container_section_fourth > main {
+.container_section_fourth > section {
     font-size: 16px;
     font-weight: 400;
     width: 100%;
 }
 
-.container_section_fourth > main > p {
+.container_section_fourth > section > p {
     width: 60vh;
     margin: 0 auto;
     padding: 5vh;
