--- a/markup/css/style.css
+++ b/markup/css/style.css
@@ -27,26 +27,30 @@ h3 {
 }
 
 nav {
-    font-size: 16px;
+    font-size: 1.1em;
     font-weight: 500;
     padding-left: 22%;
     padding-top: 79px;
     margin-bottom: 13vh;
-    letter-spacing: 0.1em;
 }
 
-a {
+li > a {
     color: black;
     font-weight: 500;
 }
 
 a:hover {
     cursor: pointer;
+    font-weight: 600;
+    font-size: 1.2em;
+    transform: scale(10);
+    transition: all 0.3s ease;
 }
 
 nav>ul>li {
-    display: inline-block;
     margin-right: 5%;
+    float: left;
+    
 }
 
 .container_section_first > section {
@@ -76,6 +80,13 @@ h2 {
     font-size: 16px;
     margin-top: 80px;
     border-radius: 5px;
+    font-weight: 400;
+}
+
+.butn:hover {
+    background: #2d4d77;
+    transform: scale(1);
+    transition: all 0.3s ease-in-out;
 }
 
 .container_section_second {
